--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+== 0.4.0 / HEAD
+
+* Removed Jeweler
+* Removed Ditz
+
 == 0.3.0 / 2010-02-23
 
 * Don't bump off content-type for STOMP messages (http://github.com/craigw/smqueue/commit/b8ef318190ae0db4e6922bd41f1bc8ecb3b865a9)
